# uv-monorepo

./: CHANGELOG.md  README.md  generate_token.md  pyproject.toml
.github/workflows/: release-package.yml
scripts/: update_package_deps.py
scripts/psr/custom_parser/: monorepo_parser.py
src/uvws/: __init__.py  main.py
