[project]
name = "uvws"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mdop297", email = "lenhatminh297@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
uvws = "uvws:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = [
    "packages/core",
]
